--- a/src/app/modules/report/block-list/block-list.component.scss
+++ b/src/app/modules/report/block-list/block-list.component.scss
@@ -30,3 +30,13 @@
     margin-top:20px;
     float:right
 }
+
+.tableWrapper {
+    max-height: 55vh;
+    overflow: auto;
+}
+.blockExpansion {
+    .mat-expansion-panel-body {
+        padding: 0 !important;
+    }
+}
