Block list and linking to reports added

--- a/src/app/modules/report/block-list/block-list.component.scss
+++ b/src/app/modules/report/block-list/block-list.component.scss
@@ -35,8 +35,8 @@
     max-height: 55vh;
     overflow: auto;
 }
-.blockExpansion {
-    .mat-expansion-panel-body {
-        padding: 0 !important;
-    }
-}
+// .blockExpansion {
+    // .mat-expansion-panel-body {
+    //     padding: 0 !important;
+    // }
+// }
