--- a/src/styles.scss
+++ b/src/styles.scss
@@ -169,3 +169,7 @@ span:focus {
 ._capitalize {
   text-transform: capitalize !important;
 }
+
+.mat-expansion-panel-body {
+  padding: 0 10px !important;
+}
