--- a/src/app/modules/report/multiple-entity-drilldown-report/multiple-entity-drilldown-report.component.html
+++ b/src/app/modules/report/multiple-entity-drilldown-report/multiple-entity-drilldown-report.component.html
@@ -4,7 +4,7 @@
 
 <div>
   <div class="_flex-box _justify-content-space-between">
-    <h4 class="marginTop">{{'headings.performanceReport' | translate}}</h4>
+    <h4 class="marginTop">{{mutipleEntity?.heading}}</h4>
     <button mat-button color="primary"
       (click)="naviagteToRubrics()">{{'headings.frameworkRubricView' | translate}}</button>
   </div>
