--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -31,18 +31,21 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> {{'tableLabel.name'| translate}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <th mat-header-cell *matHeaderCellDef class="spacing" style="flex:1; text-align: left"> {{'tableLabel.name'| translate}} </th>
+            <td mat-cell *matCellDef="let element" class="spacing" style="flex:1 ;text-align: left"> {{element.name}} </td>
           </ng-container>
           <ng-container matColumnDef="city">
-            <th mat-header-cell *matHeaderCellDef> {{'tableLabel.city'| translate}} </th>
-            <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+            <th mat-header-cell *matHeaderCellDef class="spacing"> {{'tableLabel.city'| translate}} </th>
+            <td mat-cell *matCellDef="let element"  class="spacing" > {{element.city}} </td>
           </ng-container>
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> <button mat-button [disabled]="!enableMultiSchool"
-                (click)="getAction('multiEntity')">Multi entity report</button> </th>
-            <td mat-cell *matCellDef="let element"> <button mat-button color="primary"
-                (click)="$event?.stopPropagation();getAction('singleEntity', element._id)">Single entity report</button>
+            <th mat-header-cell *matHeaderCellDef> 
+              <button mat-button [disabled]="!enableMultiSchool"
+                (click)="getAction('multiEntity', block?.label)" style="width: 140px">Multi entity report</button> 
+              </th>
+            <td mat-cell *matCellDef="let element" style="width: 140px"> 
+              <button mat-button color="primary"
+                (click)="$event?.stopPropagation();getAction('singleEntity', block?.label,element._id)">Single entity report</button>
             </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns ; sticky: true" style="height: 36px"></tr>
