--- a/src/app/modules/report/multiple-entity-report/multiple-entity-report.component.html
+++ b/src/app/modules/report/multiple-entity-report/multiple-entity-report.component.html
@@ -26,6 +26,7 @@
       </mat-list>
     </mat-card>
   </div>
+  <div class="col-xs-12 _flex-box _flex-end _small-Top-Margin" ><app-share-link></app-share-link></div>
 
   <div class="col-xs-12 marginTop" *ngFor="let section of mutipleEntity?.sections">
     <mat-card class="containerAdj">
