--- a/src/app/modules/report/entity-report/entity-report.component.html
+++ b/src/app/modules/report/entity-report/entity-report.component.html
@@ -3,10 +3,11 @@
 <app-parent-heading [genericHeading]="headings" [showControl]="false"></app-parent-heading>
 
 <div>
-  <div class="_flex-box _justify-content-space-between">
-    <h4 class="marginTop">{{'headings.performanceReport' | translate}}</h4>
+  <div class="_flex-box ">
+    <h4 class="marginTop" style="flex:1">{{'headings.performanceReport' | translate}}</h4>
     <button mat-button color="primary"
       (click)="naviagteToRubrics()">{{'headings.frameworkRubricView' | translate}}</button>
+    <app-share-link></app-share-link>
 
   </div>
   <div>
@@ -27,7 +28,7 @@
       </mat-list>
     </mat-card>
   </div>
-  <div class="col-xs-12 _flex-box _flex-end _small-Top-Margin" ><app-share-link></app-share-link></div>
+  <!-- <div class="col-xs-12 _flex-box _flex-end _small-Top-Margin" ></div> -->
 
   <div class="col-xs-12 marginTop" *ngFor="let section of insightReport?.sections">
     <mat-card class="containerAdj">
