--- a/src/app/modules/report/multiple-entity-drilldown-report/multiple-entity-drilldown-report.component.html
+++ b/src/app/modules/report/multiple-entity-drilldown-report/multiple-entity-drilldown-report.component.html
@@ -3,10 +3,11 @@
 <app-parent-heading [genericHeading]="headings" [showControl]="false"></app-parent-heading>
 
 <div>
-  <div class="_flex-box _justify-content-space-between">
-    <h4 class="marginTop">{{mutipleEntity?.heading}}</h4>
-    <button mat-button color="primary"
-      (click)="naviagteToRubrics()">{{'headings.frameworkRubricView' | translate}}</button>
+  <div class="_flex-box _full-width">
+    <h4 class="marginTop" style="flex:1">{{mutipleEntity?.heading}}</h4>
+    <button mat-button color="primary" (click)="naviagteToRubrics()">{{'headings.frameworkRubricView' | translate}}
+    </button>
+    <app-share-link></app-share-link>
   </div>
   <div>
     <mat-card>
@@ -26,7 +27,7 @@
       </mat-list>
     </mat-card>
   </div>
-  <div class="col-xs-12 _flex-box _flex-end _small-Top-Margin" ><app-share-link></app-share-link></div>
+  <!-- <div class="col-xs-12 _flex-box _flex-end _small-Top-Margin" ><app-share-link></app-share-link></div> -->
 
   <div class="col-xs-12 marginTop" *ngFor="let section of mutipleEntity?.sections">
     <mat-card class="containerAdj">
