--- a/src/app/modules/report/entity-report/components/schools/schools.component.html
+++ b/src/app/modules/report/entity-report/components/schools/schools.component.html
@@ -7,10 +7,10 @@
       
       <div class="tableContainer">
     <table mat-table [dataSource]="dataSource" matSort class="_full-width ">
-      <ng-container matColumnDef="externalId">
+      <!-- <ng-container matColumnDef="externalId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header><div class="padding"> External id </div></th>
         <td mat-cell *matCellDef="let element"><div class="padding">{{element.externalId}}</div>  </td>
-      </ng-container>
+      </ng-container> -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> <div class="padding">School</div> </th>
         <td mat-cell *matCellDef="let element"><div class="padding">{{element.name}} </div> </td>
