--- a/src/styles.scss
+++ b/src/styles.scss
@@ -169,3 +169,15 @@ span:focus {
 ._capitalize {
   text-transform: capitalize !important;
 }
+._expansion-height{
+  height:48px !important;
+  line-height: 48px !important;
+}
+
+._fontSize{
+  font-size: .8em !important;
+}
+
+.mat-paginator-container{
+  flex-wrap: nowrap !important;
+}
