--- a/src/app/modules/report/highlevel-entity-report/highlevel-entity-report.component.html
+++ b/src/app/modules/report/highlevel-entity-report/highlevel-entity-report.component.html
@@ -12,7 +12,7 @@
     <mat-card>
       <mat-list class="middle">
         <mat-list-item *ngFor="let item of highLevelInsight?.summary;let last = last;">
-          <div class="_flex-box _full-width">
+          <div class="_flex-box _full-width _fontSize">
             <div style="flex:1">
               {{item?.title}}
             </div>
