--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -20,13 +20,19 @@
             </button>
           <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
         </mat-form-field>
+
+
         <app-table [dataSource]="dataSource"></app-table>
-        <ng-container *ngTemplateOutlet="paginator"></ng-container>
+
+
+        <!-- <ng-container *ngTemplateOutlet="paginator"></ng-container> -->
+
+
       </div>
 
     </mat-expansion-panel>
   </div>
 </div>
-<ng-template #paginator>
+<!-- <ng-template #paginator>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</ng-template>
+</ng-template> -->
