pagination in 1 component

--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -23,7 +23,7 @@
 
        <div *ngIf="apidata">
         <app-table [dataSource]="dataSource" [apidata]="apidata"  [link]="links"></app-table>
-        <!-- <app-table [dataSource]="dataSource"  [link]="links"></app-table> -->
+        <!-- <app-table [apidata]="apidata" [link]="links"></app-table> -->
 
       </div>
         <!-- <ng-container *ngTemplateOutlet="paginator"></ng-container> -->
