--- a/src/app/modules/report/table/table.component.html
+++ b/src/app/modules/report/table/table.component.html
@@ -35,9 +35,11 @@
 </table> 
 
 
-<ng-container *ngTemplateOutlet="paginator"></ng-container>
+<!-- <ng-container *ngTemplateOutlet="paginator"></ng-container> -->
 
 
-<ng-template #paginator>
+<!-- <ng-template #paginator>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</ng-template>
+</ng-template> -->
+<mat-paginator #paginator #test [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+<!-- {{test.pageSizeOptions}} -->
