pagination working in all the expansion panel

--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -20,18 +20,10 @@
             </button>
           <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
         </mat-form-field>
-
-       <div *ngIf="apidata">
-        <app-table [dataSource]="dataSource" [apidata]="apidata"  [link]="links"></app-table>
-        <!-- <app-table [apidata]="apidata" [link]="links"></app-table> -->
-
+      <div *ngIf="apidata">
+        <app-table [apidata]="apidata" [link]="links"></app-table>
+       </div>
       </div>
-        <!-- <ng-container *ngTemplateOutlet="paginator"></ng-container> -->
-      </div>
-
     </mat-expansion-panel>
   </div>
 </div>
-<!-- <ng-template #paginator>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</ng-template> -->
