--- a/src/app/modules/report/table/table.component.html
+++ b/src/app/modules/report/table/table.component.html
@@ -34,12 +34,9 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="toggleRow(row)"></tr>
 </table> 
 
-
-<!-- <ng-container *ngTemplateOutlet="paginator"></ng-container> -->
-
-
-<!-- <ng-template #paginator>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</ng-template> -->
-<mat-paginator #paginator #test [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-<!-- {{test.pageSizeOptions}} -->
+<mat-paginator #paginator 
+    [length]="length"
+    [pageSize]="pageSize"
+    [pageSizeOptions]="[5, 10, 20]"
+    (page)="pageEvent = $event" showFirstLastButtons>
+</mat-paginator>
