--- a/src/app/modules/report/table/table.component.html
+++ b/src/app/modules/report/table/table.component.html
@@ -1,3 +1,12 @@
+<mat-form-field class="_full-width">
+  <button mat-button matPrefix mat-icon-button aria-label="Clear">
+      <i class="material-icons">
+        search
+      </i>
+  </button>
+<input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+</mat-form-field>
+  
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 width">
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef style="padding-right: 15px">
