--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -10,13 +10,10 @@
           {{block.label}}
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <mat-spinner *ngIf="!dataSource"></mat-spinner>
-      <div class="tableWrapper" *ngIf="dataSource">
-        <!-- Table component -->
-      <div *ngIf="apidata">
-        <!-- <app-table [apidata]="apidata" [link]="links"></app-table> -->
-        <app-table [apidata]="apidata" [dataSource]="dataSource" [link]="links"></app-table>
-      </div>
+      <div class="tableWrapper">
+        <div *ngIf="selectedZoneIndex === index">
+          <app-table [apidata]="apidata" [link]="links" [zoneId]="block.id"></app-table>
+        </div>
       </div>
     </mat-expansion-panel>
   </div>
