--- a/src/app/modules/report/block-list/block-list.component.html
+++ b/src/app/modules/report/block-list/block-list.component.html
@@ -12,7 +12,7 @@
       </mat-expansion-panel-header>
       <div class="tableWrapper">
         <div *ngIf="selectedZoneIndex === index">
-          <app-table [apidata]="apidata" [link]="links" [zoneId]="block.id"></app-table>
+          <app-table [data]="data" [link]="links" [zoneId]="block.id"></app-table>
         </div>
       </div>
     </mat-expansion-panel>
