--- a/src/app/modules/report/schools/schools.component.scss
+++ b/src/app/modules/report/schools/schools.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../assets/scss/varibles.scss';
+@import '../../../../assets/scss/varibles.scss';
 .mat-column-action {
     width: 100px;
     margin-top: 15px;
