--- a/src/app/modules/report/download-report/download-report.component.html
+++ b/src/app/modules/report/download-report/download-report.component.html
@@ -1,4 +1,4 @@
-<app-parent-heading [genericHeading]="heading"></app-parent-heading>
+<app-parent-heading [genericHeading]="heading" [startIndex]="3"></app-parent-heading>
 <div class="noDataFound">
   <mat-form-field>
     <mat-select placeholder="{{'downloadReport' | translate}}">
