--- a/src/app/modules/report/framework-structure-rubric-defintion/framework-structure-rubric-defintion.component.html
+++ b/src/app/modules/report/framework-structure-rubric-defintion/framework-structure-rubric-defintion.component.html
@@ -1,5 +1,5 @@
 <app-loader></app-loader>
-<app-parent-heading [genericHeading]="headings" [showControl]="false"></app-parent-heading>
+<app-parent-heading [genericHeading]="headings" [startIndex]="3" [showControl]="false"></app-parent-heading>
 
 <div *ngIf="rubricData" class="_margin-top">
   <h4 >{{rubricData.heading}}</h4>
