--- a/src/app/modules/operations/uploading-csv/uploading-csv.component.html
+++ b/src/app/modules/operations/uploading-csv/uploading-csv.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <app-parent-heading [genericHeading]="headings"></app-parent-heading>
+  <app-parent-heading  [startIndex]="3"[genericHeading]="headings"></app-parent-heading>
 
 
   <div class="col-xs-12 col-md-6 col-lg-6 col-sm-12 marginTopBottom">
