--- a/src/app/modules/report/reports-dashboard/report-dashboard.component.html
+++ b/src/app/modules/report/reports-dashboard/report-dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-<app-parent-heading [genericHeading]="headings" [showControl]="true"></app-parent-heading>
+<app-parent-heading [genericHeading]="headings" [startIndex]="3" [showControl]="true"></app-parent-heading>
 </div>
 <dashboard-blocks [list]="dashboards" (sendNavigationLink)="navigateLink($event)" ></dashboard-blocks>
 
