--- a/src/app/modules/report/table/table.component.html
+++ b/src/app/modules/report/table/table.component.html
@@ -13,13 +13,13 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 _full-width">
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef style="padding-right: 15px">
-        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection?.hasValue() && isAllSelected()"
+        <!-- <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection?.hasValue() && isAllSelected()"
           [indeterminate]="selection?.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-        </mat-checkbox>
+        </mat-checkbox> -->
       </th>
       <td mat-cell *matCellDef="let row" style="padding-right: 15px">
-        <mat-checkbox (click)="$event?.stopPropagation()" (change)="$event ? toggleRow(row) : null"
-          [checked]="selection?.isSelected(row)" [aria-label]="checkboxLabel(row)">
+        <mat-checkbox (click)="$event?.stopPropagation() ; selection.selected.length > limitSelection ? showMessage():null" (change)="$event ? toggleRow(row) : null"
+          [checked]="selection?.isSelected(row)" [disabled]="selection.selected.length > limitSelection" [aria-label]="checkboxLabel(row)" >
         </mat-checkbox>
       </td>
     </ng-container>
@@ -38,7 +38,7 @@
           style="width: 140px">Multi entity report</button>
       </th>
       <td mat-cell *matCellDef="let element" style="width: 140px">
-        <button mat-button color="primary"
+        <button mat-button color="primary" [disabled]="!element.isSingleEntityDrillDown && !element.isSingleEntityHighLevel "
           (click)="$event?.stopPropagation();getAction('singleEntity', block?.label,element._id)">Single entity
           report</button>
       </td>
@@ -50,4 +50,5 @@
   <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]" (page)="pageEvent = $event"
     showFirstLastButtons>
   </mat-paginator>
+  
 </div>
