--- a/src/app/modules/workspace/add-program/add-program.component.html
+++ b/src/app/modules/workspace/add-program/add-program.component.html
@@ -32,5 +32,11 @@
             keyboard_arrow_right
         </i>
     </button>
+
+    <div class="col-sx-12 wrapper">
+    <mat-card *ngIf="showProgram" class="col-xs-12 ">
+       <app-dynamic-form [genericData]="programData" [genericForm]="programsForm" ></app-dynamic-form>
+    </mat-card>
+    </div>
   </mat-drawer-content>
 </mat-drawer-container>
