--- a/src/app/modules/workspace/add-program/add-program.component.scss
+++ b/src/app/modules/workspace/add-program/add-program.component.scss
@@ -7,6 +7,11 @@
     bottom: 10px;
     right: 10px;
 }
+.topRight{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
 .sideTab {
     width: 50px;
     // float: right;
@@ -15,7 +20,11 @@
 }
 .innerContainer{
  display: flex !important;
- justify-content: center !important;
+ text-align: -webkit-center;
+
+//  justify-content: center !important;
+ flex-direction: column;
+ align-items: flex-start
 }
 .wrapper{
     padding:20px;
